Bug 329186 - Font change in system settings has no effect in icon view of files/directories
Summary: Font change in system settings has no effect in icon view of files/directories
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 4.12.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 336404 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-24 09:33 UTC by Kjetil Kilhavn
Modified: 2014-06-18 22:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kjetil Kilhavn 2013-12-24 09:33:59 UTC
When I change the font size in System Settings (Application Appearance → Fonts) and press Apply the change takes effect in Dolphin’s panel (Places), but not in the file viewing area. I have to restart Dolphin for the change to take effect.

I have not found any existing reports for this, but it seems related to e.g. 256856 and 323917 (315061).



Reproducible: Always

Steps to Reproduce:
1. Open Dolphin
2. Open System Settings and go to Application Appearance → Fonts
3. Change the font size(s) and press Apply
Actual Results:  
The font in Places panel is changed. The font in the file viewing area is not changed.

Expected Results:  
The font is changed both in the Places panel and in the file viewing area.

The change is (as expected) picked up if I close and restart Dolphin, so this is not a large problem - hence I use Minor as severity.
Comment 1 Frank Reininghaus 2013-12-28 14:30:27 UTC
Thanks for the bug report. I can confirm this problem. It's not an Icons View issue though - it applies to all view modes.

(In reply to comment #0)
> I have not found any existing reports for this, but it seems related to e.g.
> 256856 and 323917 (315061).

Please always prepend bug numbers with the word "bug" (like bug 315061). Bugzilla then generates a link which can be clicked.
Comment 2 Emmanuel Pescosta 2014-02-22 20:35:15 UTC
Review-Request: https://git.reviewboard.kde.org/r/115958/
Comment 3 Emmanuel Pescosta 2014-02-24 13:19:33 UTC
Git commit f40b80a960de8a2db6110b6fa14db2d7182ad6c3 by Emmanuel Pescosta.
Committed on 24/02/2014 at 13:17.
Pushed by emmanuelp into branch 'master'.

Handle font and palette changes in Dolphin list views.

Also update the font of the meta data widget in InformationPanelContent (smallest readable font).
Related: bug 315061
FIXED-IN: 4.13
REVIEW: 115958

M  +37   -4    dolphin/src/kitemviews/kitemlistview.cpp
M  +3    -0    dolphin/src/kitemviews/kitemlistview.h
M  +4    -0    dolphin/src/panels/information/informationpanelcontent.cpp
M  +20   -17   dolphin/src/views/dolphinitemlistview.cpp
M  +2    -1    dolphin/src/views/dolphinitemlistview.h

http://commits.kde.org/kde-baseapps/f40b80a960de8a2db6110b6fa14db2d7182ad6c3
Comment 4 Emmanuel Pescosta 2014-06-18 22:53:32 UTC
*** Bug 336404 has been marked as a duplicate of this bug. ***