src/panels/information/informationpanelcontent.cpp
@@ -271,6 +271,10 @@ bool InformationPanelContent::eventFilter(QObject* obj, QEvent* event)
         adjustWidgetSizes(parentWidget()->width());
         break;
 
+    case QEvent::FontChange:
+        m_metaDataWidget->setFont(KGlobalSettings::smallestReadableFont());
+        break;
+
     default:
         break;
     }
